[package]
name = "bevy_synthizer"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = { version = "0.8", default-features = false, features = ["bevy_asset"] }
synthizer = { git = "https://github.com/ndarilek/synthizer-rs"  }

[dev-dependencies]
bevy = { version = "0.8", default-features = true }