[package]
name = "bevy_synthizer"
version = "0.3.1"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
description = "A Bevy plugin for Synthizer, a library for 3D audio and synthesis with a focus on games and VR applications"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://labs.lightsout.games/projects/bevy_synthizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = { version = "0.10", default-features = false, features = ["bevy_asset"] }
synthizer = "0.5.6"

[dev-dependencies]
bevy = { version = "0.10", default-features = true }

[package.metadata.release]
publish = false
push = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
pre-release-commit-message = "Release"
